remote.css
html {
  cursor: auto;
}

body {
  margin: 10px;
  height: calc(100% - 20px);
  width: calc(100% - 20px);
}

a {
  color: white;
}

.menu-element {
  flex: 0 0 auto;
}

.symbol-text-padding {
  padding-left: 0.2em;
  padding-right: 0.5em;
}

.fill {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.above-fold {
  flex: 0 0 auto;
}

.below-fold {
  border-top: 1px solid #666;
  margin-top: 7px;
  padding-top: 7px;
  flex: 1 1 auto;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
}

.hide-border {
  border-top: 0;
  margin-top: 0;
  padding-top: 0;
}

.menu-container {
  display: flex;
  flex-direction: column;
  min-height: min-content;
}

.menu {
  display: flex;
  flex-flow: row wrap;
  place-content: flex-start space-between;
  align-items: stretch;
  overflow-y: hidden;
}

.sub-menu {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: space-between;
}

.result-list {
  width: 100%;
}

.results {
  display: flex;
  flex-direction: column;
}

.results:last-child {
  margin-bottom: 2em;
}

.menu-element-container {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}

.one-line {
  flex: 1 0 auto;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
}

.flex-like-button {
  flex: 0 1 auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

.button {
  cursor: pointer;
  border: 1px solid #666;
  border-radius: 0.2em;
  padding: 0.1em;
  margin: 0.1em;
  flex: 0 1 auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

.button.bright {
  border: 1px solid #999;
}

.button > * {
  flex: 0 0 auto;
}

.text {
  flex: 1 1 auto;
  margin-left: 0.2em;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  min-width: 0;
}

.fa-angle-right {
  margin-right: 0.5em;
  text-align: right;
}

.status-indicator {
  display: none;
  margin: 0.1em;
  padding: 0.1em;
}

.overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  background: black;
  opacity: 0.5;
}

.result {
  position: absolute;
  width: 70%;
  height: 50%;
  left: 15%;
  top: 25%;
  background: black;
  border: 2px solid #666;
  display: flex;
  border-radius: 0.2em;
  flex-direction: column;
  justify-content: center;
  font-size: 25px;
  line-height: 1.5em;
}

.module-line {
  margin-bottom: 5px;
}

#config-modules-results .module-line {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
}

#config-modules-results .module-line > span {
  overflow-x: auto;
  white-space: nowrap;
}

#update-module-results .module-line {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
}

#update-module-results .module-line > span {
  overflow-x: auto;
  white-space: nowrap;
}

.results > div:nth-child(even) {
  background-color: #222;
}

#add-module-results > div {
  background-color: #000;
}

#visible-modules-results > div {
  background-color: #000;
}

input,
select,
textarea {
  flex: 3 0 auto;
  background: #000;
  color: #999;
  font-size: inherit;
  border: 2px solid #999;
  border-radius: 0.2em;
  padding: 0.2em;
}

select {
  flex: 1 0 auto;
}

input:focus,
select:focus,
textarea:focus {
  color: #fff;
  border: 2px solid #fff;
  background-color: #444;
}

input:focus.input-error {
  border: 2px solid #f44;
}

#alert input {
  box-sizing: border-box;
  width: 100%;
}

#alert textarea {
  box-sizing: border-box;
  width: 100%;
}

.config-label {
  display: flex;
  flex-wrap: wrap;
  place-content: space-around space-between;
  align-items: center;
  margin-bottom: 0.8em;
}

.label-name {
  flex: 1 1 auto;
  white-space: nowrap;
  overflow-x: auto;
}

.type-edit {
  flex: 0 0 auto;
  white-space: nowrap;
  color: #666;
}

.highlight {
  color: #fff;
  background-color: #444;
}

.highlight .type-edit {
  color: #999;
}

.highlight .button {
  border: 1px solid #999;
}

.bottom-spacing {
  margin-bottom: 0.8em;
}

.search-container {
  position: relative;
}

.delete-button {
  cursor: pointer;
  position: absolute;
  right: 0.5em;
  top: 0.5em;
}

.popup .delete-button {
  right: 0.25em;
  top: 0.25em;
}

.result .delete-button {
  right: 0.25em;
  top: 0.25em;
}

/* general toggle rules */
.toggled-off > * > .fa-toggle-on {
  display: none;
}

.toggled-off > .fa-toggle-on {
  display: none;
}

.toggled-on > * > .fa-toggle-off {
  display: none;
}

.toggled-on > .fa-toggle-off {
  display: none;
}

/* edit button specific stuff */
.module-line > * > .fa-lock {
  display: none;
}

.external-locked > * > .fa-lock.inner-small-label {
  display: inline-block;
}

.slider-container {
  vertical-align: middle;
  width: calc(100% - 4em);
}

.stack {
  position: relative;
  display: inline-block;
  height: 1em;
  line-height: 1em;
  font-size: 1em;
  vertical-align: middle;
}

.inner-label {
  font-size: 0.9em;
}

.inner-monitor-label {
  font-size: 0.5em;
  top: -0.15em;
  left: -0.05em;
}

.inner-small-label {
  font-size: 0.4em;
  left: -0.5em;
}

.outer-label {
  font-size: 1em;
}

.slider {
  border: 0;
}

.popup {
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  background-color: black;
  position: absolute;
  border: 2px solid #999;
  top: 0;
  border-radius: 5px;
  display: none;
  overflow-y: auto;
}

.success-popup {
  width: 30%;
  min-width: 100px;
  background-color: black;
  position: absolute;
  bottom: 0;
  display: none;
  padding: 6px;
  border: 2px solid #666;
  border-radius: 0.2em;
  font-size: 20px;
  line-height: 1.5em;
}

.popup-contents {
  padding: 5px 10px;
  display: flex;
  flex-direction: column;
  height: calc(100% - 10px);
  width: calc(100% - 20px);
}

.title {
  flex: 0 0 auto;
  margin: 0.2em 1.5em 0.2em 0.5em;
  text-align: center;
}

.subtitle {
  flex: 0 1 auto;
  padding-right: 5px;
  text-align: right;
  font-style: italic;
}

.indent {
  border: 1px dashed #666;
  margin: 0 0 0.8em;
  padding: 5px 8px;
}

.disabled {
  border: 2px solid #222;
}

.align-right {
  text-align: right;
}

.flex-fill {
  flex: 1 1 auto;
  overflow: auto;
}

.fixed-size {
  flex: 0 0 auto;
}

.add-input-wrapper {
  display: flex;
  align-items: stretch;
  align-content: stretch;
}

.add-input-wrapper .fa-plus {
  justify-content: space-around;
}

#load-error {
  font-size: medium;
  line-height: normal;
}

.inline-menu-element {
  display: inline-block;
}

.hidden {
  display: none;
}

/* checkbox shenanigans */
.visual-checkbox {
  text-align: center;
}

input[type="checkbox"] {
  opacity: 0;
}

input[type="checkbox"] ~ .fa-square-o {
  display: block;
}

input[type="checkbox"] ~ .fa-check-square-o {
  display: none;
}

input[type="checkbox"]:checked ~ .fa-square-o {
  display: none;
}

input[type="checkbox"]:checked ~ .fa-check-square-o {
  display: block;
}

:root {
  --track-color: #999;
}

input[type="range"] {
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  width: calc(100% - 0.5em);
  height: 30px;
  padding: 0;
}

input[type="range"]:focus {
  --track-color: #9c9c9c;

  outline: none;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background: #fff;
  cursor: pointer;
  border: none;
  margin-top: -10px;
}

input[type="range"]::-webkit-slider-runnable-track {
  width: 100%;
  height: 10px;
  background: var(--track-color);
  border-radius: 10px;
  border: none;
}

input[type="range"]::-moz-range-thumb {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background: #fff;
  cursor: pointer;
  border: none;
}

input[type="range"]::-moz-range-track {
  width: 100%;
  height: 10px;
  background: var(--track-color);
  border-radius: 10px;
  border: none;
}

code,
samp,
kbd {
  font-family: "Courier New", Courier, monospace, sans-serif;
  text-align: left;
}

pre code {
  line-height: 0.6em;
  font-size: 0.5rem;
}

pre {
  padding: 0.3em 0.5em 0.2em 0.7em;
  border-left: 2px solid #ccc;
  margin: 1em 0.3em 0.2em 0.6em;
  overflow: auto;
  width: 90%;
  max-height: 35vh;
}

#changelog {
  max-height: 30vh;
  font-size: small;
  overflow: scroll;
}

#temp-slider,
#temp-reset {
  display: block;
}

